# affineImageMatching

./: .gitignore  .gitmodules  README.md  loftr.Dockerfile  pre-sift-aid.Dockerfile  sift-aid.Dockerfile
cpp/: CMakeLists.txt  gen_tests.py
cpp/src/: main.cpp
cpp/utils/: find_model.cpp  find_model.hpp  genIO.cpp  genIO.hpp
py/: collectData.py  requirements.txt
